--- a/src/components/PressureSeal/Hero.astro
+++ b/src/components/PressureSeal/Hero.astro
@@ -1,11 +1,9 @@
 ---
 const {pressuresealHeader, pressuresealDesc, pressuresealImage} = Astro.props;
-
-const photoUrl = `${import.meta.env.STRAPI_URL}${pressuresealImage}`;
 ---
 
 <div>
     <h1>{pressuresealHeader}</h1>
     <p>{pressuresealDesc}</p>
-    <img src={photoUrl} alt="random alt text">
+    <img src={pressuresealImage} alt="random alt text">
 </div>
