--- a/src/components/AboutUs/AboutUsWhy.astro
+++ b/src/components/AboutUs/AboutUsWhy.astro
@@ -12,7 +12,7 @@ const {
     localexpertiseText
 } = Astro.props;
 
-const photoUrl = `${import.meta.env.STRAPI_URL}${aboutUsWhyImage}`;
+
 ---
 
 <div>
@@ -29,7 +29,7 @@ const photoUrl = `${import.meta.env.STRAPI_URL}${aboutUsWhyImage}`;
         <p>{localexpertiseText}</p>
     </section>
     <div>
-        <img src={photoUrl} alt="random alt text">
+        <img src={aboutUsWhyImage} alt="random alt text">
         <a href="#">{aboutUsWhyBtn}</a>
     </div>
 </div>
