--- a/src/components/AboutUs/Hero.astro
+++ b/src/components/AboutUs/Hero.astro
@@ -1,11 +1,10 @@
 ---
 const {aboutUsHeroHeader, aboutUsHeroDesc, aboutUsHeroImage} = Astro.props;
 
-const photoUrl = `${import.meta.env.STRAPI_URL}${aboutUsHeroImage}`;
 ---
 
 <div>
     <h1>{aboutUsHeroHeader}</h1>
-    <img src={photoUrl} alt="random alt text">
+    <img src={aboutUsHeroImage} alt="random alt text">
     <p>{aboutUsHeroDesc}</p>
 </div>
