--- a/src/components/HomePage/About.astro
+++ b/src/components/HomePage/About.astro
@@ -1,12 +1,12 @@
 ---
 const {aboutHeader, aboutImage, aboutText, aboutBtn} = Astro.props;
 
-const photoUrl = `${import.meta.env.STRAPI_URL}${aboutImage}`;
+
 ---
 
 <div>
     <h2>{aboutHeader}</h2>
-    <img src={photoUrl} alt="random alt text">
+    <img src={aboutImage} alt="random alt text">
     <p>{aboutText}</p>
     <a href="#">{aboutBtn}</a>
 </div>
