--- a/src/components/HomePage/PromoProducts.astro
+++ b/src/components/HomePage/PromoProducts.astro
@@ -1,13 +1,12 @@
 ---
 const {promoProductsHeader, promoProductsImage, promoproductsText,  promoProductsBtn} = Astro.props;
-const photoUrl = `${import.meta.env.STRAPI_URL}${promoProductsImage}`;
 ---
 
 <div>
     <section>
         <h2>{promoProductsHeader}</h2>
         <p>{promoproductsText}</p>
-        <img src={photoUrl} alt="random alt text">
+        <img src={promoProductsImage} alt="random alt text">
         <a href="#">{promoProductsBtn}</a>
     </section>
 </div>
