--- a/src/components/IntegratedForm/Hero.astro
+++ b/src/components/IntegratedForm/Hero.astro
@@ -1,11 +1,9 @@
 ---
 const {integratedformlabelHeader, integratedformlabelDesc, integratedformlabelImage} = Astro.props;
-
-const photoUrl = `${import.meta.env.STRAPI_URL}${integratedformlabelImage}`;
 ---
 
 <div>
     <h1>{integratedformlabelHeader}</h1>
     <p>{integratedformlabelDesc}</p>
-    <img src={photoUrl} alt="random alt text">
+    <img src={integratedformlabelImage} alt="random alt text">
 </div>
