--- a/src/components/LinerlessLabel/SustainableLabel.astro
+++ b/src/components/LinerlessLabel/SustainableLabel.astro
@@ -1,7 +1,5 @@
 ---
 const {keyadvantagesTitle, nolinerText, continuousrollText, custombrandingText, excellentforText, sustainableImage, sustainableBtn, sustainableTitle} = Astro.props;
-
-const photoUrl = `${import.meta.env.STRAPI_URL}${sustainableImage}`;
 ---
 
 <div>
@@ -13,6 +11,6 @@ const photoUrl = `${import.meta.env.STRAPI_URL}${sustainableImage}`;
         <li>{custombrandingText}</li>
         <li>{excellentforText}</li>
     </ul>
-    <img src={photoUrl} alt="random alt text">
+    <img src={sustainableImage} alt="random alt text">
     <a href="#">{sustainableBtn}</a>
 </div>
