--- a/src/components/Products/FeaturedProducts.astro
+++ b/src/components/Products/FeaturedProducts.astro
@@ -11,26 +11,23 @@ const {
     integratedformImage,
     integratedformBtn
     } = Astro.props;
-const pressuresealUrl = `${import.meta.env.STRAPI_URL}${pressuresealImage}`;
-const linerlessUrl = `${import.meta.env.STRAPI_URL}${linerlessImage}`;
-const integratedformUrl = `${import.meta.env.STRAPI_URL}${integratedformImage}`;
 ---
 
 <div>
     <h2>{featureProductsHeader}</h2>
     <section>
         <h3>{pressuresealTitle}</h3>
-        <img src={pressuresealUrl} alt="random alt text">
+        <img src={pressuresealImage} alt="random alt text">
         <a href="/pressuresealenvelope">{pressuresealBtn}</a>
     </section>
     <section>
         <h3>{linerlessTitle}</h3>
-        <img src={linerlessUrl} alt="random alt text">
+        <img src={linerlessImage} alt="random alt text">
         <a href="/linerlesslabel">{linerlessBtn}</a>
     </section>
     <section>
         <h3>{integratedformTitle}</h3>
-        <img src={integratedformUrl} alt="random alt text">
+        <img src={integratedformImage} alt="random alt text">
         <a href="/integratedformlabel">{integratedformBtn}</a>
     </section>
 </div>
